--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -472,8 +472,8 @@
             "send": "Доставка"
         },
         "declined": {
-            "no_note": "Нет записи",
-            "title": "Причина отказа"
+            "title": "Причина отказа",
+            "no_note": "Нет записи"
         },
         "details": {
             "created_at": "Представлено на:",
@@ -505,9 +505,9 @@
             "answer_btn": "Ответьте на этот вопрос",
             "answer_btn_info": "Нажмите кнопку<strong>\"Ответить на этот вопрос</strong>\", чтобы отправить дополнительную информацию. Информация будет добавлена в заявку.",
             "answer_question_label": "Ответьте на вопрос",
+            "optional_label": "(необязательно)",
             "my_answer": "Мой ответ",
-            "my_message": "Мое сообщение",
-            "optional_label": "(необязательно)"
+            "my_message": "Мое сообщение"
         },
         "sign_up": {
             "app": {
@@ -637,13 +637,13 @@
             "info_responded_count": "{{count}} сообщение"
         },
         "labels": {
+            "question_from": "Вопрос от {{ name }}",
             "date": "Дата:",
-            "question": "Вопрос",
-            "question_from": "Вопрос от {{ name }}"
+            "question": "Вопрос задан"
         },
         "records": {
-            "subtitle": "В этом блоке содержится личная информация, которую вы указали в заявке на получение средств.",
-            "title": "Мои данные ({{ count }})"
+            "title": "Мои данные ({{ count }})",
+            "subtitle": "Ниже приведены личные данные, заполненные при подаче заявки."
         },
         "subtitle": "Эта страница содержит информацию о заявке. Здесь можно просмотреть статус, заполненные данные и дополнительные вопросы.",
         "modal": {
@@ -1320,7 +1320,8 @@
         "vergoedingen": "логотип Муниципалитет Неймегена",
         "waalwijk": "Пункт пропуска",
         "westerkwartier": "Муниципалитет Вестерквартье",
-        "winterswijk": "Муниципалитет Винтерсвейк"
+        "winterswijk": "Муниципалитет Винтерсвейк",
+        "home": "На главную страницу"
     },
     "maps": {
         "cancel": "Отмена",
@@ -2051,9 +2052,6 @@
             "not-pending": "Настройки уведомлений уже были настроены по этой ссылке"
         },
         "new_time_enabled": "Новое время включено",
-        "no_email_button": "Добавить электронную почту",
-        "no_email_description": "Пожалуйста, добавьте адрес электронной почты, чтобы получать уведомления по электронной почте.",
-        "no_email_title": "В настоящее время у вас нет электронной почты, связанной с вашей учетной записью",
         "popups": {
             "auto_close_info": "Включите автоматическое закрытие уведомлений, чтобы настроить время их отображения.",
             "times": {
@@ -2079,8 +2077,6 @@
             "title": "Настройки времени отображения уведомлений"
         },
         "subscribe": "Да, я хочу получать уведомления.",
-        "subscribe_desc_formal": "{{email}}Используя этот адрес электронной почты \" \", вы в настоящее время не подписаны на все уведомления. Если вы хотите получать уведомления, вы можете настроить их для каждого уведомления ниже.",
-        "subscribe_desc_informal": "{{email}}С этим адресом электронной почты \" \" вы в настоящее время не подписаны на все уведомления. Если вы хотите получать уведомления, вы можете настроить их для каждого уведомления ниже.",
         "title": "Параметры уведомлений",
         "title_email_preferences": "Уведомления по электронной почте",
         "title_emails_turned_of": "Отказаться от подписки на все сообщения электронной почты",
@@ -2161,23 +2157,28 @@
             },
             "vouchers": {
                 "payment_success": {
-                    "description": "Получите уведомление по электронной почте об успешном проведении платежа.",
-                    "title": "Оплата прошла успешно"
+                    "title": "Оплата прошла успешно",
+                    "description": "Получите уведомление по электронной почте о том, что платеж прошел успешно."
                 },
                 "send_voucher": {
-                    "description": "Получайте уведомление по электронной почте, когда вы отправляете кредит самому себе.",
-                    "title": "Отправьте кредит самому себе"
+                    "title": "Отправьте кредит самому себе",
+                    "description": "Получайте уведомление по электронной почте, когда вы отправляете кредит самому себе."
                 },
                 "share_product": {
-                    "description": "Получите уведомление по электронной почте, если вам было предоставлено предложение о бронировании.",
-                    "title": "Совместное предложение по бронированию"
+                    "title": "Совместное предложение по бронированию",
+                    "description": "Получите уведомление по электронной почте, если вам было предоставлено предложение о бронировании."
                 }
             }
         },
         "unsubscribe": "Отказаться от всех уведомлений по электронной почте",
         "unsubscribe_button": "Отписаться от рассылки",
         "unsubscribe_desc": "Я хочу отписаться от всех уведомлений по электронной почте.",
-        "auto_close_after": "Всплывающие уведомления автоматически закрываются через {{value}} секунд."
+        "auto_close_after": "Всплывающие уведомления автоматически закрываются через {{value}} секунд.",
+        "no_email_button": "Добавить адрес электронной почты",
+        "no_email_description": "Добавьте адрес электронной почты для получения уведомлений.",
+        "no_email_title": "У вас еще нет адреса электронной почты, связанного с вашей учетной записью",
+        "subscribe_desc_formal": "С этим адресом электронной почты \"{{email}}\" вы в настоящее время отписаны от всех уведомлений. Если вы хотите получать уведомления, вы можете установить это ниже для каждого уведомления.",
+        "subscribe_desc_informal": "С этим адресом электронной почты \"{{email}}\" вы в настоящее время отписаны от всех уведомлений. Если вы хотите получать уведомления, вы можете настроить их для каждого уведомления ниже."
     },
     "privacy": {
         "breadcrumbs": {
@@ -2283,7 +2284,8 @@
         },
         "tooltip": "Сколько еще раз вы можете воспользоваться этим предложением",
         "price": {
-            "free": "Бесплатно"
+            "free": "Бесплатно",
+            "informational": "Только в магазине"
         }
     },
     "products": {
@@ -2316,14 +2318,21 @@
             "search": "Поисковое предложение",
             "sort": "Сортировать",
             "sub_category": "Подкатегория",
-            "payment_option_ideal": "Оплата онлайн с помощью iDeal",
             "payment_option_qr": "Показать QR-код у провайдера",
             "payment_option_reservation": "Забронировать онлайн",
             "payment_options": "Варианты оплаты",
             "payment_options_info": "Подробнее о вариантах оплаты",
             "price": "Цена (€)",
             "price_from": "С сайта",
-            "price_to": "На"
+            "price_to": "На",
+            "payment_option_extra_payment": "Оплата онлайн с помощью iDeal",
+            "price_type_option_discount_fixed": "Скидка в евро",
+            "price_type_option_discount_percentage": "Скидка в процентах",
+            "price_type_option_free": "Бесплатно",
+            "price_type_option_informational": "Только в магазине",
+            "price_type_option_regular": "Цена",
+            "price_type_options": "Тип предложения",
+            "price_type_options_info": "Подробнее о типах предложений"
         },
         "sort": {
             "created_at_asc": "Самый старый первый",
@@ -3516,7 +3525,6 @@
         "title": "На этом сайте используются файлы cookie",
         "view": "Посмотреть "
     },
-    "logo_title": "На домашнюю страницу :host",
     "push": {
         "deleted": "Удалено!",
         "error": "Не удалось!",
@@ -3574,6 +3582,9 @@
         "required": "Обязательно",
         "placeholders": {
             "select_option": "Выберите вариант"
+        },
+        "range_control": {
+            "aria_value": "Значение {{prefix}}{{value}} , минимальное значение {{prefix}}{{min}} , максимальное значение {{prefix}}{{max}}"
         }
     },
     "modal_deactivate_voucher": {
@@ -3608,6 +3619,23 @@
         "info_option_qr_title": "QR-код",
         "info_option_reservation_description": "Оплатите заказ через этот сайт, заказав предложение. Для этого нажмите на кнопку резервирования и заполните необходимые данные. Сумма будет вычтена непосредственно из доступного кредита. Поставщик получит заказ и при необходимости свяжется с вами.",
         "info_option_reservation_title": "Бронирование",
+        "title": "Варианты оплаты"
+    },
+    "logo_title": "На главную страницу сайта {{host}}",
+    "modal_product_price_type_options_info": {
+        "confirm": "Закрыть",
+        "description": "Продукты в интернет-магазине могут предлагаться различными способами. Ниже описано, что означают различные типы предложений.",
+        "header": "Типы предложений",
+        "info_option_discount_fixed_description": "Фиксированная сумма будет вычтена из цены, например, скидка €5.",
+        "info_option_discount_fixed_title": "Скидка в евро",
+        "info_option_discount_percentage_description": "Часть цены снимается, например, скидка 20%.",
+        "info_option_discount_percentage_title": "Скидка в процентах",
+        "info_option_free_description": "Продукт ничего не стоит. Никакой оплаты не требуется.",
+        "info_option_free_title": "Бесплатно",
+        "info_option_informational_description": "Это предложение не продается онлайн. Оно доступно только в магазине или месте расположения поставщика.",
+        "info_option_informational_title": "Только в магазине",
+        "info_option_regular_description": "У товара есть фиксированная цена. Это сумма, которую необходимо заплатить, например 10 евро.",
+        "info_option_regular_title": "Цена",
         "title": "Варианты оплаты"
     }
 }
